fixed bug where nav bar disappeared behind hero section. Used z-index of -1 on hero section.

--- a/src/css/hero.css
+++ b/src/css/hero.css
@@ -5,6 +5,7 @@
     min-height: 35rem;
     gap: var(--gap-responsive);
     position: relative;
+    z-index: -1;
 }
 
 .hero .cs-content_text {
